<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/favourite_button"
        android:checkable="true"
        android:enabled="true"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/favourite"
        android:tooltipText="@string/favourite_tooltip"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/save_button"
        android:checkable="true"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        android:tooltipText="@string/save"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/favourite_button_drop_down"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/favourite_tooltip"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/save_button_drop_down"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/save"
        android:visible="true"
        app:showAsAction="never" />
</menu>