<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.app.credentialvault.credvault.activities.NotesActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gridBackground">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/credInputNoteTitle"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintTextColorForms">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:textColorHint="@color/cardtext"
                    android:inputType="text"
                    android:textColor="@color/pureWhite"
                    android:textColorHighlight="@color/pureWhite"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/credInputNote"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hintTextColorForms">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:textColor="@color/pureWhite"
                    android:textColorHighlight="@color/pureWhite"
                    android:lines="15"
                    android:maxLines="15"
                    android:scrollbars="vertical"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/credCheckBoxFavNewNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favourite_checkbox"
                android:textColor="@color/cardtext"
                android:theme="@style/CheckBoxComponent"
                android:padding="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button android:id="@+id/credSaveNewNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/gridBackground"
                    android:textColor="@color/cardtext"
                    android:text="@string/save" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
