<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.app.credentialvault.credvault.activities.BasicAuthenticationActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gridBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/labelFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_star_black_24dp"
        android:background="@color/transparent"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="14dp"
        android:rowCount="1"
        android:columnCount="4"
        android:padding="10dp"
        android:alignmentMode="alignMargins"
        android:background="@color/gridBackground"
        android:id="@+id/gridLayout">

        <android.support.v7.widget.CardView
            android:id="@+id/cardAllWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@color/transparent"
            android:textAlignment="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fav_website"
                    android:textColor="@color/cardtext"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_web"
                    android:background="@color/transparent"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cardAllCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@color/transparent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fav_card"
                    android:textColor="@color/cardtext"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_creditcard"
                    android:background="@color/transparent"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cardAllNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@color/transparent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fav_notes"
                    android:textColor="@color/cardtext"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_note"
                    android:background="@color/transparent"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cardAllBasic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@color/transparent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fav_basic"
                    android:textColor="@color/cardtext"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_basic"
                    android:background="@color/transparent"/>
        </android.support.v7.widget.CardView>


    </GridLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gridLayout"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="0dp"
        app:menu_animationDelayPerItem="50"
        app:menu_backgroundColor="@color/transparentGray"
        app:menu_buttonSpacing="0dp"
        app:menu_colorNormal="#DA4336"
        app:menu_colorPressed="#E75043"
        app:menu_colorRipple="#99FFFFFF"
        app:menu_fab_label=""
        app:menu_fab_size="normal"
        app:menu_icon="@drawable/fab_add"
        app:menu_labels_colorNormal="#333333"
        app:menu_labels_colorPressed="#444444"
        app:menu_labels_colorRipple="#66FFFFFF"
        app:menu_labels_cornerRadius="3dp"
        app:menu_labels_ellipsize="none"
        app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        app:menu_labels_margin="0dp"
        app:menu_labels_maxLines="-1"
        app:menu_labels_padding="8dp"
        app:menu_labels_paddingBottom="4dp"
        app:menu_labels_paddingLeft="8dp"
        app:menu_labels_paddingRight="8dp"
        app:menu_labels_paddingTop="4dp"
        app:menu_labels_position="left"
        app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        app:menu_labels_showShadow="true"
        app:menu_labels_singleLine="false"
        app:menu_labels_textColor="#FFFFFF"
        app:menu_labels_textSize="14sp"
        app:menu_openDirection="up"
        app:menu_shadowColor="#66000000"
        app:menu_shadowRadius="4dp"
        app:menu_shadowXOffset="1dp"
        app:menu_shadowYOffset="3dp"
        app:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addWebsiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_web_black_24dp"
            app:fab_label="@string/fam_website"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addBasicAuthButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/basic_authentication_24dp"
            app:fab_label="@string/fam_basic"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addNewCardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_credit_card_black_24dp"
            app:fab_label="@string/fam_card"
            app:fab_size="mini" />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_note_add_black_24dp"
            app:fab_label="@string/fam_notes"
            app:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_margin="14dp"
        android:background="@color/transparent"
        android:padding="20dp"></android.support.v7.widget.RecyclerView>

</RelativeLayout>
